<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/sm_bg">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|left"
        android:background="@drawable/actionbar_bg"
        >
       <ImageView 
           android:layout_width="45dp"
           android:layout_height="45dp"
           android:src="@drawable/sm_online_logo"
           android:paddingLeft="20dp"
           />
         <ImageView 
           android:layout_width="125dp"
           android:layout_height="35dp"
           android:src="@drawable/sm_zzsd_text"
           />
    </LinearLayout>
    <ScrollView 
        android:layout_width="fill_parent"
   	    android:layout_height="0dp"
   	    android:layout_weight="1"
   	    android:scrollbars="none"
   	    android:background="@color/sm_bg"
        >
   	<LinearLayout 
   	 	android:layout_width="fill_parent"
   	 	android:layout_height="wrap_content"
   	    android:orientation="vertical"
   	    android:background="@color/sm_bg"
   	    >
   	    <!-- label one -->
      	<TextView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="@dimen/sm_label_height"
   	        android:layout_gravity="center_vertical"
   	        android:gravity="center_vertical"
   	        android:text="@string/sm_label_usual"
   	        android:paddingLeft="@dimen/sm_label_padding"
   	       	android:textAppearance="@android:style/TextAppearance.Small"
   			android:textColor="@color/sm_label_color"
   	        />
   	    <ImageView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="3dp"
   	        android:background="@drawable/sm_divider_line_new"
   	        android:layout_marginLeft="@dimen/list_margin"
   	        android:layout_marginRight="@dimen/list_margin"
   	        />
   	     <TextView 
   	        android:id="@+id/sm_item_notification"
   	        android:layout_width="fill_parent"
   	        android:layout_height="@dimen/sm_item_height"
   	        android:layout_gravity="center"
   	        android:gravity="center_vertical"
   	        android:text="@string/sm_item_notification"
   	        android:textColor="@color/sm_item_color_default"
   	        android:drawableLeft="@drawable/sm_news"
   	        android:drawablePadding="@dimen/sm_item_icon_padding"
   	        android:paddingLeft="@dimen/sm_item_padding"
   	        android:textAppearance="@android:style/TextAppearance.Medium"
   	        android:background="@drawable/sm_item_clicked"
   	        android:clickable="true"
   	        />
   	     <ImageView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="1dp"
   	        android:layout_marginLeft="@dimen/sm_item_padding"
   	        android:layout_marginRight="@dimen/sm_item_padding"
   	        android:background="@drawable/sm_divider_line_new"
   	        />
   	     <TextView 
   	         android:id="@+id/sm_item_news"
   	        android:layout_width="fill_parent"
   	        android:layout_height="@dimen/sm_item_height"
   	        android:layout_gravity="center"
   	        android:gravity="center_vertical"
   	        android:text="@string/sm_item_news"
   	        android:textColor="@color/sm_item_color_default"
   	        android:drawableLeft="@drawable/sm_news"
   	        android:drawablePadding="@dimen/sm_item_icon_padding"
   	        android:paddingLeft="@dimen/sm_item_padding"
   	        android:textAppearance="@android:style/TextAppearance.Medium"
   	        android:background="@drawable/sm_item_clicked"
   	        android:clickable="true"
   	        />
   	     <ImageView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="1dp"
   	        android:layout_marginLeft="@dimen/sm_item_padding"
   	        android:layout_marginRight="@dimen/sm_item_padding"
   	        android:background="@drawable/sm_divider_line_new"
   	        />
   	       <TextView 
   	        android:id="@+id/sm_item_search"
   	        android:layout_width="fill_parent"
   	        android:layout_height="@dimen/sm_item_height"
   	        android:layout_gravity="center"
   	        android:gravity="center_vertical"
   	        android:text="@string/sm_item_search"
   	        android:textColor="@color/sm_item_color_default"
   	        android:drawableLeft="@drawable/sm_search"
   	        android:drawablePadding="@dimen/sm_item_icon_padding"
   	        android:paddingLeft="@dimen/sm_item_padding"
   	        android:textAppearance="@android:style/TextAppearance.Medium"
   	        android:background="@drawable/sm_item_clicked"
   	        android:clickable="true"
   	        />
   	     <ImageView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="1dp"
   	        android:layout_marginLeft="@dimen/sm_item_padding"
   	        android:layout_marginRight="@dimen/sm_item_padding"
   	        android:background="@drawable/sm_divider_line_new"
   	        />
   	       <TextView 
   	           android:id="@+id/sm_item_shoucang"
   	        android:layout_width="fill_parent"
   	        android:layout_height="@dimen/sm_item_height"
   	        android:layout_gravity="center"
   	        android:gravity="center_vertical"
   	        android:text="@string/sm_item_shoucang"
   	        android:textColor="@color/sm_item_color_default"
   	        android:drawableLeft="@drawable/sm_shoucang"
   	        android:drawablePadding="@dimen/sm_item_icon_padding"
   	        android:paddingLeft="@dimen/sm_item_padding"
   	        android:textAppearance="@android:style/TextAppearance.Medium"
   	        android:background="@drawable/sm_item_clicked"
   	        android:clickable="true"
   	        />
   	     <ImageView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="1dp"
   	        android:layout_marginLeft="@dimen/sm_item_padding"
   	        android:layout_marginRight="@dimen/sm_item_padding"
   	        android:background="@drawable/sm_divider_line_new"
   	        />
   	     
   	     <!-- label two -->
   	       	<TextView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="@dimen/sm_label_height"
   	        android:layout_gravity="center_vertical"
   	        android:gravity="center_vertical"
   	        android:text="@string/sm_label_more"
   	        android:paddingLeft="@dimen/sm_label_padding"
   	       	android:textAppearance="@android:style/TextAppearance.Small"
   			android:textColor="@color/sm_label_color"
   	        />
   	    <ImageView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="3dp"
   	        android:background="@drawable/sm_divider_line_new"
   	        android:layout_marginLeft="@dimen/list_margin"
   	        android:layout_marginRight="@dimen/list_margin"
   	        />
   	        <TextView 
   	        android:id="@+id/sm_item_apps"
   	        android:layout_width="fill_parent"
   	        android:layout_height="@dimen/sm_item_height"
   	        android:layout_gravity="center"
   	        android:gravity="center_vertical"
   	        android:text="@string/sm_item_apps"
   	        android:textColor="@color/sm_item_color_default"
   	        android:drawableLeft="@drawable/sm_apps_center"
   	        android:drawablePadding="@dimen/sm_item_icon_padding"
   	        android:paddingLeft="@dimen/sm_item_padding"
   	        android:textAppearance="@android:style/TextAppearance.Medium"
   	        android:background="@drawable/sm_item_clicked"
   	        android:clickable="true"
   	        />
   	     <ImageView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="1dp"
   	        android:layout_marginLeft="@dimen/sm_item_padding"
   	        android:layout_marginRight="@dimen/sm_item_padding"
   	        android:background="@drawable/sm_divider_line_new"
   	        />
   	     
   	     
   	     <!-- label three -->
   	     <TextView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="@dimen/sm_label_height"
   	        android:layout_gravity="center_vertical"
   	        android:gravity="center_vertical"
   	        android:text="@string/sm_label_operation"
   	        android:paddingLeft="@dimen/sm_label_padding"
   	       	android:textAppearance="@android:style/TextAppearance.Small"
   			android:textColor="@color/sm_label_color"
   	        />
   	    <ImageView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="3dp"
   	        android:background="@drawable/sm_divider_line_new"
   	        android:layout_marginLeft="@dimen/list_margin"
   	        android:layout_marginRight="@dimen/list_margin"
   	        />
   	        <TextView 
   	        android:id="@+id/sm_item_settings"
   	        android:layout_width="fill_parent"
   	        android:layout_height="@dimen/sm_item_height"
   	        android:layout_gravity="center"
   	        android:gravity="center_vertical"
   	        android:text="@string/sm_item_settings"
   	        android:textColor="@color/sm_item_color_default"
   	        android:drawableLeft="@drawable/sm_settings"
   	        android:drawablePadding="@dimen/sm_item_icon_padding"
   	        android:paddingLeft="@dimen/sm_item_padding"
   	        android:textAppearance="@android:style/TextAppearance.Medium"
   	        android:background="@drawable/sm_item_clicked"
   	        android:clickable="true"
   	        />
   	     <ImageView 
   	        android:layout_width="fill_parent"
   	        android:layout_height="1dp"
   	        android:layout_marginLeft="@dimen/sm_item_padding"
   	        android:layout_marginRight="@dimen/sm_item_padding"
   	        android:background="@drawable/sm_divider_line_new"
   	        />
   	        <TextView 
   	        android:id="@+id/sm_item_exit"
   	        android:layout_width="fill_parent"
   	        android:layout_height="@dimen/sm_item_height"
   	        android:layout_gravity="center"
   	        android:gravity="center_vertical"
   	        android:text="@string/sm_item_exit"
   	        android:textColor="@color/sm_item_color_default"
   	        android:drawableLeft="@drawable/sm_exit"
   	        android:drawablePadding="@dimen/sm_item_icon_padding"
   	        android:paddingLeft="@dimen/sm_item_padding"
   	        android:textAppearance="@android:style/TextAppearance.Medium"
   	        android:background="@drawable/sm_item_clicked"
   	        android:clickable="true"
   	        />
   	</LinearLayout>
</ScrollView>
</LinearLayout>